--- a/.github/workflows/android-apk.yml
+++ b/.github/workflows/android-apk.yml
@@ -22,6 +22,8 @@ jobs:
         run: npm ci
 
       - name: Build static web (Next.js)
+        env:
+          NEXT_OUTPUT: export
         run: npm run build
 
       - name: Sync Capacitor Android
