--- a/.github/workflows/android-apk.yml
+++ b/.github/workflows/android-apk.yml
@@ -18,15 +18,15 @@ jobs:
           node-version: "18.x"
           cache: "npm"
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install Dependencies
+        run: npm install
 
-      - name: Build static web (Next.js)
+      - name: Build Web Project
         env:
           NEXT_OUTPUT: export
         run: npm run build
 
-      - name: Sync Capacitor Android
+      - name: Sync Capacitor
         run: npx cap sync android
 
       - name: Setup Android SDK
