--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
+    "build:export": "npm run build && npm run export",
     "start": "next start",
     "test": "vitest run"
   },
   "dependencies": {
+    "@capacitor/android": "^6.2.1",
     "@capacitor/core": "^6.2.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.378.0",
@@ -20,7 +23,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^8.1.0",
     "@types/node": "25.2.3",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "19.2.13",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
