--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -15,12 +15,14 @@
         "directory": "DOCUMENTS"
       }
     },
+    "Http": {},
     "Share": {},
     "App": {}
   },
   "android": {
     "includePlugins": [
       "Filesystem",
+      "Http",
       "Share",
       "App"
     ],
