--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@capacitor/android": "^6.2.1",
     "@capacitor/core": "^6.2.1",
+    "@capacitor/http": "^0.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.378.0",
     "next": "^15.0.3-canary.3",
