--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@capacitor/android": "^6.2.1",
     "@capacitor/browser": "^6.0.6",
     "@capacitor/core": "^6.2.1",
+    "@capacitor/filesystem": "^8.1.2",
     "@capacitor/http": "^0.0.2",
+    "@capacitor/share": "^8.0.1",
+    "@capgo/capacitor-purchases": "^10.0.0",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "jszip": "^3.10.1",
     "lucide-react": "^0.378.0",
     "next": "^15.0.3-canary.3",
