--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -33,7 +33,8 @@
       "Share",
       "App",
       "GoogleAuth",
-      "Purchases"
+      "Purchases",
+      "InAppPurchase"
     ],
     "flavor": "capacitor"
   }
