--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -28,8 +28,8 @@ jobs:
           node-version: '18'
           cache: 'npm'
 
-      - name: Install
-        run: npm ci
+      - name: Install (legacy peer deps)
+        run: npm install --legacy-peer-deps
 
       - name: Build static export
         env:
