--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-  "version": 2,
-  "installCommand": "npm install --legacy-peer-deps",
-  "buildCommand": "npm run build:export",
+  "buildCommand": "npm run build",
   "outputDirectory": "out",
   "trailingSlash": true
 }
