--- a/.github/workflows/android-apk.yml
+++ b/.github/workflows/android-apk.yml
@@ -20,6 +20,11 @@ jobs:
           rm -rf out || true
       - name: Install (legacy peer deps)
         run: npm install --legacy-peer-deps
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
       - name: Ensure Android project exists
         run: |
           if [ ! -d "android" ]; then
@@ -36,11 +41,17 @@ jobs:
             platform-tools
             platforms;android-34
             build-tools;34.0.0
+      - name: Prepare keystore
+        env:
+          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+        run: |
+          mkdir -p android/app
+          echo "$KEYSTORE_BASE64" | base64 --decode > android/app/diligencego-release.keystore
       - name: Build APK Release
         working-directory: android
         run: |
-          ./gradlew clean
-          ./gradlew assembleRelease
+          ./gradlew clean --stacktrace
+          ./gradlew assembleRelease --stacktrace
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
